fixed winning message not showing up & changed the position a bit

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -128,12 +128,10 @@ main {
 }
 
 ._win-lose {
-	margin: var(--font-size-second) 0;
-	font-size: var(--font-size-button);
 	font-weight: bold;
 
 	position: absolute;
-	top: 0;
+	top: 12px;
 }
 
 /* Play Again / Bottom Part */
